--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     }
 
     $(document).ready(function() {
-      $.getJSON('vattern2024.json')
+      $.getJSON('https://raw.githubusercontent.com/FreddanL74/Vattern2024/main/vattern2024%20(3).json')
         .done(json => { data = json; update(); })
         .fail((_, __, error) => { console.error('Failed to load JSON:', error); alert('Could not load data, see console.'); });
     });
